src/styles/style.css
/* ... */
.detail-title-wrapper a.toggl-button.taiga {
  margin: 8px 5px 0 4px;
  text-decoration: none;
  flex-grow: 0;
}

.card .card-title.toggl {
  display: flex;
}

.epic-row a.toggl-button,
.card-title a.toggl-button {
  margin: 0 0.3rem 0 0;
  position: relative;
  top: -1px;
  min-width: 19px;
}

.column-fold .card-title a.toggl-button.taiga.active {
  opacity: 0;
  display: none !important;
}

.issues-table .row a.toggl-button.taiga {
  margin-top: 0;
  text-decoration: none;
  flex-grow: 0;
}

/********* AXOSOFT *********/
.toggl-button.axosoft {
  margin-left: 10px;
  float: right;
}
.toggl-button.axosoft.edit {
  margin-top: 9px;
}
.toggl-button.axosoft.view {
  margin-top: 4px;
}

/********* COUNTERSOFT GEMINI *********/
.toggl-button.gemini {
  margin-top: 5px;
  position: absolute;
  right: 260px;
  font-size: 12px;
  white-space: nowrap;
}

/********* GETFLOW *********/
.toggl-button.getflow {
  font-size: 0px;
  margin: 0px 0px 0px 5px;
  padding-left: 25px;
  line-height: 21px;
  background-size: 19px;
  height: auto;
  color: #575858;
  font-weight: 500;
  vertical-align: middle;
  opacity: 0.3;
  -webkit-transition: all 0.4s ease;
  transition: all 0.4s ease;
}
.toggl-button.getflow:hover,
.toggl-button.getflow.active {
  opacity: 1;
}
/********* SPRINTLY *********/
.toggl-button.sprintly {
  margin-left: 5px;
}

/********* GOOGLE CALENDAR *********/
.toggl-button.google-calendar {
  margin-left: 30px;
  margin-bottom: 10px;
  margin-top: -2px;
}

.toggl-button.google-calendar-modern {
  margin-top: 10px;
  margin-right: 5px;
  color: #5f6368;
  z-index: 0;
}

.bubblecontent .toggl-button.google-calendar {
  margin-left: -4px;
}

/********* DOBAMBAM *********/
.toggl-button.dobambam {
  float: right;
  margin-right: 35px;
  margin-top: -25px;
}

.actionBar .toggl-button.dobambam {
  margin-left: 7px;
  float: left;
  margin-top: 8px;
}

/********* BREEZE PM *********/
.card_box:hover .toggl-button {
  visibility: visible;
}

.toggl-button.breeze {
  visibility: hidden;
  font-style: normal;
  width: 0px;
  overflow: hidden;
  position: absolute;
  margin-left: -34px;
  margin-top: 1px;
  -webkit-filter: saturate(0);
}

.toggl-button.breeze:hover,
.toggl-button.breeze.active {
  visibility: visible;
  -webkit-filter: saturate(100%);
}

.tracker-hold .toggl-button.breeze {
  visibility: visible;
  width: 100%;
  margin-top: 5px;
  margin-left: 0;
  -webkit-filter: saturate(1);
}

/********* WRIKE *********/
.toggl-button.wrike {
  display: flex !important;
  height: 24px;
  align-items: center;
  font-size: 12px;
  gap: 4px;
  text-decoration: none;
  color: rgb(80, 79, 79);
  padding: 0 0 0 16px;
}

/********* ASSEMBLA *********/
.toggl-button.assembla {
  padding-left: 23px;
  font-size: 14px;
  margin: 10px 0 0 30px;
}

/********* SALESFORCE *********/
.toggl-button.salesforce-legacy {
  padding-right: 5px;
  margin-bottom: -6px;
}
.toggl-button.salesforce-legacy:not(.minimal) {
  margin-left: 5px;
  font-size: 12px;
  text-decoration: none;
  font-weight: normal;
}
/* Lightning UI */
.toggl-button-salesforce-wrapper {
  margin-left: auto;
}
.custom-truncate .toggl-button.salesforce {
  /* avoid button image being truncated */
  padding-left: 25px;
}

.slds-split-view__list-item .salesforce-list {
  position: absolute;
  right: 0.5rem;
  visibility: hidden;
}
.slds-split-view__list-item:hover .salesforce-list {
  background-color: white !important;
  visibility: visible;
  z-index: 1;
}

/********* VISUAL-STUDIO *********/
.toggl-button.visual-studio-online {
  font-size: 12px;
  margin: 3px 0 0 20px;
}

/********* DRAFTIN *********/
.toggl-button.draftin {
  margin-right: 15px;
}

/********* ManageEngine *********/
.toggl-button.manageengine {
  float: right;
  margin: 0 6px 0 6px;
}

/********* PHABRICATOR *********/
.toggl-button.phabricator {
  margin-left: 5px;
}

.phui-oi-name > .toggl-button.phabricator {
  position: absolute;
}

li > .toggl-button.phabricator {
  position: relative;
}

/********* MANTISHUB *********/
.toggl-button.mantishub {
  margin-top: 5px;
  margin-left: 5px;
}

/********* REMEMEBER THE MILK *********/
.toggl-button.rememberthemilk {
  margin-left: 5px;
  position: absolute;
}
.toggl-button.rememberthemilk:not(.active) {
  display: none !important;
}

*:hover > .toggl-button.rememberthemilk {
  display: inline-block !important;
}

/********* FRESHDESK *********/
.toggl-button.freshdesk {
  margin-top: 3px;
}
.toggl-button.freshdesk__mint {
  margin: 0;
  position: relative;
  top: 6px;
  left: 5px;
}

/********* Clickup *********/
.toggl-button.clickup.min svg,
.toggl-button.clickup.min span {
  visibility: hidden;
}

/********* CLOUDES.ME *********/
.boxedDotted .toggl-button.cloudes {
  margin-left: 7px;
  color: #fff;
  text-decoration: none;
  font-weight: bold;
}
/********* DOIT *********/
.title > .toggl-button.doit {
  position: absolute;
  top: 10px;
}

.title > .ng-hide + .toggl-button.doit {
  margin-left: 5px;
}

.task-op > .toggl-button.doit {
  color: #222;
  font-size: 14px;
  display: inline-block;
  height: 24px;
  line-height: 24px;
  text-align: center;
  border: 1px solid #d6d6d6;
  padding: 0 12px;
  text-decoration: none;
  box-shadow: 0 1px 0 #d6d6d6;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  padding: 0 10px 0 35px;
  background-position: 10px 2px !important;
}

/********* SLACK *********/
.toggl-button.slack-message:not(.toggl-button-edit-form-button) {
  position: relative;
  top: 2px;
  width: 16px;
  height: 16px;
  padding-left: 0;
  background-size: 100%;
  background-position: center bottom;
}

.slack-message-container {
  position: relative;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

/********* ZOHO BOOKS *********/
.toggl-button.zoho_books {
  margin-top: 5px;
  margin-left: 4px;
}
/********* KEEP *********/
.toggl-button.keep {
  margin-top: 6px;
}

.notes-container .CmABtb.RNfche .toggl-button.keep {
  display: none !important;
}
/* ... */

